--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,6 +56,9 @@ a {
 .buttonBg {
   background: linear-gradient(276.17deg, #F45356 0%, #FF9127 104.34%);
 }
+.buttonBg:hover {
+  background: linear-gradient(276.17deg, #FF9127 0%, #F45356 113.34%);
+}
 .h2Title{
   font-size: 30px;
   font-weight: 700;
