--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,16 +73,16 @@ a {
   animation: bounce-in 3s ease;
 }
 @keyframes bounce-in {
-  0% {
+  /* 0% {
     opacity: 0;
     transform: scale(.3);
-  }
+  } */
   50% {
     opacity: 1;
     transform: scale(1.05);
   }
   70% { transform: scale(.9); }
-  /* 100% { transform: scale(1); } */
+  100% { transform: scale(1); }
 }
 
 .shake {
