--- a/styles/globals.css
+++ b/styles/globals.css
@@ -107,6 +107,19 @@ a {
     100% { transform:translateY(0); }
 }
 
+.bounce-infininite {
+  animation: bounce 3s ease infinite;
+}
+@keyframes bounce-infininite {
+    70% { transform:translateY(0%); }
+    80% { transform:translateY(-15%); }
+    90% { transform:translateY(0%); }
+    95% { transform:translateY(-7%); }
+    97% { transform:translateY(0%); }
+    99% { transform:translateY(-3%); }
+    100% { transform:translateY(0); }
+}
+
 .bounce2 {
   animation: bounce2 3s ease;
 }
