--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,37 +1,35 @@
-
 @font-face {
-  font-family: 'Sofia Sans';
-  src: url('./fonts/SofiaSans-Regular.woff2') format('woff2'),
-      url('./fonts/SofiaSans-Regular.woff') format('woff');
+  font-family: "Sofia Sans";
+  src: url("./fonts/SofiaSans-Regular.woff2") format("woff2"),
+    url("./fonts/SofiaSans-Regular.woff") format("woff");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: 'Sofia Sans';
-  src: url('./fonts/SofiaSans-Bold.woff2') format('woff2'),
-      url('./fonts/SofiaSans-Bold.woff') format('woff');
+  font-family: "Sofia Sans";
+  src: url("./fonts/SofiaSans-Bold.woff2") format("woff2"),
+    url("./fonts/SofiaSans-Bold.woff") format("woff");
   font-weight: 700;
   font-style: blod;
   font-display: swap;
 }
 @font-face {
-  font-family: 'Sofia Sans';
-  src: url('./fonts/SofiaSans-ExtraBold.woff2') format('woff2'),
-      url('./fonts/SofiaSans-ExtraBold.woff') format('woff');
+  font-family: "Sofia Sans";
+  src: url("./fonts/SofiaSans-ExtraBold.woff2") format("woff2"),
+    url("./fonts/SofiaSans-ExtraBold.woff") format("woff");
   font-weight: 900;
   font-style: extrabold;
   font-display: swap;
 }
 @font-face {
-  font-family: 'Sofia Sans';
-  src: url('./fonts/SofiaSans-SemiBold.woff2') format('woff2'),
-      url('./fonts/SofiaSans-SemiBold.woff') format('woff');
+  font-family: "Sofia Sans";
+  src: url("./fonts/SofiaSans-SemiBold.woff2") format("woff2"),
+    url("./fonts/SofiaSans-SemiBold.woff") format("woff");
   font-weight: 600;
   font-style: semibold;
   font-display: swap;
 }
-
 
 @tailwind base;
 @tailwind components;
@@ -41,8 +39,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family:Sofia Sans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Sofia Sans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -54,20 +52,112 @@ a {
   box-sizing: border-box;
 }
 .buttonBg {
-  background: linear-gradient(276.17deg, #F45356 0%, #FF9127 104.34%);
+  background: linear-gradient(276.17deg, #f45356 0%, #ff9127 104.34%);
 }
 .buttonBg:hover {
-  background: linear-gradient(276.17deg, #FF9127 0%, #F45356 113.34%);
+  background: linear-gradient(276.17deg, #ff9127 0%, #f45356 113.34%);
 }
-.h2Title{
+.h2Title {
   font-size: 30px;
   font-weight: 700;
-  color: #FF8B2D;
+  color: #ff8b2d;
   margin-bottom: 25px;
 }
-.heroSectionBg{
-  background: linear-gradient(106.38deg, #FF9127 18.11%, #F45356 52.23%, #090D48 104.85%);
+.heroSectionBg {
+  background: linear-gradient(
+    106.38deg,
+    #ff9127 18.11%,
+    #f45356 52.23%,
+    #090d48 104.85%
+  );
 }
+.slugTitle {
+  font-size: 18px;
+  font-weight: 700;
+  color: #090d48;
+  line-height: 60px;
+}
+.sectionTitle {
+  font-size: 50px;
+  color: #090d48;
+  font-weight: 600;
+  line-height: 65px;
+}
+.sectionDescription {
+  color: #303030;
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 28px;
+}
+/* .testimonialHover:hover {
+  box-shadow: (0px 10px 45px rgba(222, 92, 41, 0.5));
+  background: linear-gradient(143.03deg, #ff8c2b 3.21%, #f55555 96.23%);
+  border-radius: 10px;
+  color: #fff !important;
+  transition: all 0.3s ease-in-out;
+} */
+.swiper-button-next:after {
+  content: url("../public//assets/images/right-arrow.svg");
+  position: absolute;
+  bottom: -12px;
+  right: 46%;
+  transform: translate(-50%, -50%);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  transition: all 0.3s ease-in-out;
+  z-index: 2;
+}
+
+.swiper-button-prev:after {
+  content: url("../public//assets/images/right-arrow.svg");
+  position: absolute;
+  bottom: 8px;
+  left: 47%;
+  transform: translate(-50%, -50%);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  transition: all 0.3s ease-in-out;
+  z-index: 2;
+  transform: rotate(180deg);
+}
+
+.swiper-slide-next {
+  transform: scale(1.13) !important;
+}
+.swiper-slide-next .testimonialHover {
+  box-shadow: (0px 10px 45px rgba(222, 92, 41, 0.5));
+  background: linear-gradient(143.03deg, #ff8c2b 3.21%, #f55555 96.23%);
+  border-radius: 10px;
+  color: #fff !important;
+  transition: all 0.3s ease-in-out;
+}
+.swiper-slide-next p {
+  color: #fff;
+}
+
+@media only screen and (max-width: 600px) {
+  .swiper-button-prev:after {
+    bottom: 8px;
+    left: 40%;
+  }
+  .swiper-button-next:after {
+    bottom: -12px;
+    right: 36%;
+  }
+  .swiper-slide-active .testimonialHover {
+    background: linear-gradient(143.03deg, #ff8c2b 3.21%, #f55555 96.23%);
+  }
+  .swiper-slide-next .testimonialHover {
+    background: none;
+  }
+  .swiper-slide-active p {
+    color: #fff;
+  }
+  
+}
+
 .bounce-in {
   /* animation: bounce-in 2s ease infinite; */
   animation: bounce-in 3s ease;
@@ -81,50 +171,106 @@ a {
     opacity: 1;
     transform: scale(1.05);
   }
-  70% { transform: scale(.9); }
-  100% { transform: scale(1); }
+  70% {
+    transform: scale(0.9);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 .shake {
   animation: shake 3s ease;
 }
 @keyframes shake {
-	0%, 100% {transform: translateX(0);}
-	10%, 30%, 50%, 70%, 90% {transform: translateX(-10px);}
-	20%, 40%, 60%, 80% {transform: translateX(10px);}
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
 }
 
 .bounce {
   animation: bounce 3s ease;
 }
 @keyframes bounce {
-    70% { transform:translateY(0%); }
-    80% { transform:translateY(-15%); }
-    90% { transform:translateY(0%); }
-    95% { transform:translateY(-7%); }
-    97% { transform:translateY(0%); }
-    99% { transform:translateY(-3%); }
-    100% { transform:translateY(0); }
+  70% {
+    transform: translateY(0%);
+  }
+  80% {
+    transform: translateY(-15%);
+  }
+  90% {
+    transform: translateY(0%);
+  }
+  95% {
+    transform: translateY(-7%);
+  }
+  97% {
+    transform: translateY(0%);
+  }
+  99% {
+    transform: translateY(-3%);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 
 .bounce-infininite {
   animation: bounce 3s ease infinite;
 }
 @keyframes bounce-infininite {
-    70% { transform:translateY(0%); }
-    80% { transform:translateY(-15%); }
-    90% { transform:translateY(0%); }
-    95% { transform:translateY(-7%); }
-    97% { transform:translateY(0%); }
-    99% { transform:translateY(-3%); }
-    100% { transform:translateY(0); }
+  70% {
+    transform: translateY(0%);
+  }
+  80% {
+    transform: translateY(-15%);
+  }
+  90% {
+    transform: translateY(0%);
+  }
+  95% {
+    transform: translateY(-7%);
+  }
+  97% {
+    transform: translateY(0%);
+  }
+  99% {
+    transform: translateY(-3%);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 
 .bounce2 {
   animation: bounce2 3s ease;
 }
 @keyframes bounce2 {
-	0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
-	40% {transform: translateY(-30px);}
-	60% {transform: translateY(-15px);}
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
 }
