--- a/styles/globals.css
+++ b/styles/globals.css
@@ -89,6 +89,12 @@ a {
   font-weight: 500;
   line-height: 28px;
 }
+.sectionDescriptionBigLine {
+  color: #303030;
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 45px;
+}
 /* .testimonialHover:hover {
   box-shadow: (0px 10px 45px rgba(222, 92, 41, 0.5));
   background: linear-gradient(143.03deg, #ff8c2b 3.21%, #f55555 96.23%);
@@ -155,7 +161,6 @@ a {
   .swiper-slide-active p {
     color: #fff;
   }
-  
 }
 
 .bounce-in {
