portfolio page add

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -89,6 +89,13 @@ a {
   font-weight: 500;
   line-height: 28px;
 }
+
+.sectionDescription24-30 {
+  color: #303030;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 30px;
+}
 .sectionDescriptionBigLine {
   color: #303030;
   font-size: 22px;
