--- a/styles/globals.css
+++ b/styles/globals.css
@@ -210,6 +210,99 @@ a {
   /* animation: bounce-in 2s ease infinite; */
   animation: bounce-in 3s ease;
 }
+
+
+/* Image Carousel */
+
+.carousel-container {
+  margin: 20px;
+}
+
+.selected-image {
+  width: 100%;
+  height: 500px;
+  margin-bottom: 8px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 5px;
+}
+
+.carousel {
+  position: relative;
+}
+
+.carousel__images {
+  display: flex;
+  max-width: 100%;
+  overflow-x: hidden;
+  border-radius: 5px;
+}
+
+.carousel__image-selected {
+  border: 3px solid #ffa700 !important;
+  border-radius: 5px;
+}
+
+.carousel__image {
+  margin-right: 10px;
+  height: 100px;
+  min-width: 100px;
+  border: 3px solid #ffa70000;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 5px;
+}
+
+.carousel__button {
+  position: absolute;
+  top: 40%;
+}
+
+.carousel__button-left {
+  left: -35px;
+}
+
+.carousel__button-right {
+  right: -35px;
+}
+
+
+/* react Tab */
+
+ul.react-tabs__tab-list .react-tabs__tab{
+  display: block;
+}
+
+/* RC TABS START */
+
+.rc-tabs {
+  border: none !important;
+}
+.rc-tabs-tab {
+  padding: 5px;
+  text-transform: capitalize;
+}
+.rc-tabs-tab .rc-tabs-tab-btn {
+  font-weight: normal;
+}
+.rc-tabs-tab.rc-tabs-tab-active {
+  background: ececec;
+  color: #00a6f8;
+}
+.rc-tabs-ink-bar {
+  background: #59c7fd !important;
+}
+.rc-tabs-content-holder {
+  padding: 10px;
+  background: #ececec;
+}
+.rc-tabs-content {
+}
+
+/* RC TABS STOP */
+
 @keyframes bounce-in {
   /* 0% {
     opacity: 0;
