--- a/styles/globals.css
+++ b/styles/globals.css
@@ -186,6 +186,10 @@ a {
   }
 }
 
+.imgHover {
+  @apply transition ease-in-out delay-150  hover:-translate-y-1 hover:scale-105 duration-300 cursor-pointer
+}
+
 @media only screen and (max-width: 600px) {
   .swiper-button-prev:after {
     bottom: 8px;
@@ -362,6 +366,8 @@ ul.react-tabs__tab-list{
 .productSlider .swiper {
     position: inherit !important;
 }
+
+
 @keyframes bounce-in {
   /* 0% {
     opacity: 0;
