--- a/styles/globals.css
+++ b/styles/globals.css
@@ -479,3 +479,17 @@ ul.react-tabs__tab-list {
     transform: translateY(-15px);
   }
 }
+.imageFull {
+  width: 100%;
+  height: 100%;
+}
+.imageFull span {
+  width: 100% !important;
+  height: 100% !important;
+  position: relative !important;
+}
+.imageFull img {
+  width: 100% !important;
+  height: 100% !important;
+  position: relative !important;
+}
