--- a/styles/globals.css
+++ b/styles/globals.css
@@ -493,3 +493,6 @@ ul.react-tabs__tab-list {
   height: 100% !important;
   position: relative !important;
 }
+.isHover:hover image.svgColor {
+  filter: brightness(0) invert(1);
+}
